--- a/app/src/main/res/layout-v21/content_location.xml
+++ b/app/src/main/res/layout-v21/content_location.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </FrameLayout>
-
+    
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,7 +33,8 @@
         android:layout_marginEnd="16dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:elevation="4dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +43,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/locationsearchbox"
         android:id="@+id/linear_locaton_layout"
+        android:elevation="4dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
