--- a/app/src/main/res/layout/autocomplete_item_location.xml
+++ b/app/src/main/res/layout/autocomplete_item_location.xml
@@ -8,6 +8,8 @@
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:paddingLeft="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textColor="@color/black" />
