--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,99 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fillViewport="true">
+
+<LinearLayout
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:padding="16dp" >
+
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_gravity="left"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp">
+        android:layout_width="wrap_content"
+        android:minWidth="56dp"
+        android:orientation="vertical" >
 
+        <!-- Header: Day, Date -->
         <TextView
-            android:id="@+id/detail_day_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="@color/black"
-            android:fontFamily="sans-serif-condensed"/>
-
-        <TextView
-            android:id="@+id/detail_date_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
             android:fontFamily="sans-serif-condensed"
-            android:textColor="@color/detail_light_grey"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/detail_day_textview"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="left">
-
-                <TextView
-                    android:id="@+id/detail_high_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="96sp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/detail_low_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:fontFamily="sans-serif-light"
-                    android:textColor="@color/detail_light_grey"
-                    android:textSize="48sp"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/detail_forecast_textview"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textColor="@color/detail_light_grey"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
+            android:minWidth="120dp"
+            android:layout_width="wrap_content"
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/detail_humidity_textview"
-            android:layout_width="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/detail_date_textview"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-light"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/detail_wind_textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="sans-serif-light"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/detail_pressure_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-light"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@color/black"
-            android:layout_marginTop="4dp"/>
+            android:textColor="@color/detail_light_grey"
+            android:textSize="20sp" />
 
     </LinearLayout>
+
+    <!-- Main content: high, low, art, weather state -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:fontFamily="sans-serif-light"
+            android:id="@+id/detail_high_textview"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textSize="96sp" />
+
+        <TextView
+            android:id="@+id/detail_low_textview"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_width="wrap_content"
+            android:textColor="@color/detail_light_grey"
+            android:textSize="48sp" />
+
+        <!-- Humidity, wind, pressure -->
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/detail_icon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:adjustViewBounds="true" />
+
+        <TextView
+            android:fontFamily="sans-serif-condensed"
+            android:id="@+id/detail_forecast_textview"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textColor="@color/detail_light_grey"
+            android:textAppearance="?android:textAppearanceLarge"/>
+
+    </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/detail_wind_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/detail_humidity_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/detail_pressure_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceLarge" />
+</LinearLayout>
 </ScrollView>
