--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,4 +14,13 @@
         android:layout_alignParentStart="true"
         android:divider="@null"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/emptyTextViewForecast"
+        android:text="@string/empty_forecast_string"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:gravity="center"/>
+
 </RelativeLayout>
