--- a/app/src/main/res/values/openweathermap_api.xml
+++ b/app/src/main/res/values/openweathermap_api.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--TODO: Before you run your application, you need a OPEN WEATHER MAP API key.-->
-    <string name="openweathermap_api_key" translatable="false">"Enter key here"</string>
+    <string name="openweathermap_api_key" translatable="false">eea4ee17553fe57c707e50bc6af0ccc8</string>
 </resources>
