--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,12 @@
     <dimen name="button_size">100px</dimen>
     <dimen name="notification_large_icon_default">48dp</dimen>
 
+    <dimen name="forecast_detail_horizontal_padding">32dp</dimen>
+
+    <!-- Icon Sizes -->
+    <dimen name="today_icon">96dp</dimen>
+
+    <!-- Extra Padding -->
+    <dimen name="detail_view_extra_padding">@dimen/abc_list_item_padding_horizontal_material</dimen>
+
 </resources>
